@@ -421,6 +421,10 @@ Customizing the data series
     align: "left" or "center"
   }
 
+  lines: {
+    steps: boolean
+  }
+
   colors: [ color1, color2, ... ]
 
   shadowSize: number
@@ -456,6 +460,10 @@ instance, for time series the unit is milliseconds so 24 * 60 * 60 *
 1000 produces bars with the width of a day. "align" specifies whether
 a bar should be left-aligned (default) or centered on top of the value
 it represents.
+
+For lines, "steps" specifies whether two adjacent data points are
+connected with a straight (possibly diagonal) line or with first a
+horizontal and then a vertical line.
 
 The "colors" array specifies a default color theme to get colors for
 the data series from. You can specify as many colors as you like, like
